<resources>
    <string name="app_name">HealthBuddy</string>
    <string name="healthbuddy">HEALTHBUDDY</string>
    <string name="press_any_button_to_know_about_the_disease">Press Any Button To Know About the disease</string>
    <string name="a_fever_is_a_temporary_increase_in_your_body_temperature_often_due_to_an_illness_having_a_fever_is_a_sign_that_something_out_of_the_ordinary_is_going_on_in_your_body_for_an_adult_a_fever_may_be_uncomfortable_but_usually_isn_t_a_cause_for_concern_unless_it_reaches_103_f_39_4_c_or_higher">A fever is a temporary increase in your body temperature, often due to an illness. Having a fever is a sign that something out of the ordinary is going on in your body. For an adult, a fever may be uncomfortable, but usually isn\'t a cause for concern unless it reaches 103 F (39.4 C) or higher.</string>
    <string name="_18">+18</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="good_app">Good App</string>
    <string name="take_an_over_the_counter_medication_common_otc_fever_reducers_include_acetaminophen_tylenol_children_s_tylenol_ibuprofen_advil_children_s_advil_motrin_aspirin">Take an over-the-counter medication Common OTC fever reducers include: acetaminophen (Tylenol, Children\'s Tylenol) ibuprofen (Advil, Children\'s Advil, Motrin) aspirin.</string>
    <string name="a_cramp_is_a_sudden_involuntary_muscle_contraction_or_overshortening_while_generally_temporary_and_non_damaging_they_can_cause_significant_pain_and_a_paralysis_like_immobility_of_the_affected_muscle_onset_is_usually_sudden_and_it_resolves_on_its_own_over_a_period_of_several_seconds_minutes_or_hours">A cramp is a sudden, involuntary muscle contraction or overshortening; while generally temporary and non-damaging, they can cause significant pain and a paralysis-like immobility of the affected muscle. Onset is usually sudden and it resolves on its own over a period of several seconds, minutes, or hours.</string>
    <string name="migraine_is_a_neurological_condition_that_can_cause_multiple_symptoms_it_s_frequently_characterized_by_intense_debilitating_headaches_symptoms_may_include_nausea_vomiting_difficulty_speaking_numbness_or_tingling_and_sensitivity_to_light_and_sound_migraines_often_run_in_families_and_affect_all_ages">Migraine is a neurological condition that can cause multiple symptoms. It\'s frequently characterized by intense, debilitating headaches. Symptoms may include nausea, vomiting, difficulty speaking, numbness or tingling, and sensitivity to light and sound. Migraines often run in families and affect all ages.</string>
    <string name="diarrhea_is_loose_watery_stools_bowel_movements_you_have_diarrhea_if_you_have_loose_stools_three_or_more_times_in_one_day_acute_diarrhea_is_diarrhea_that_lasts_a_short_time_it_is_a_common_problem_it_usually_lasts_about_one_or_two_days_but_it_may_last_longer">Diarrhea is loose, watery stools (bowel movements). You have diarrhea if you have loose stools three or more times in one day. Acute diarrhea is diarrhea that lasts a short time. It is a common problem. It usually lasts about one or two days, but it may last longer.</string>
    <string name="pink_eye_conjunctivitis_is_the_inflammation_or_infection_of_the_transparent_membrane_that_lines_your_eyelid_and_eyeball_it_s_characterized_by_redness_and_a_gritty_sensation_in_your_eye_along_with_itching_often_a_discharge_forms_a_crust_on_your_eyelashes_during_the_night">Pink eye (conjunctivitis) is the inflammation or infection of the transparent membrane that lines your eyelid and eyeball. It\'s characterized by redness and a gritty sensation in your eye, along with itching. Often a discharge forms a crust on your eyelashes during the night.</string>
</resources>